--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.2",
     "mongodb": "^6.1.0",
     "next": "^13.5.2",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.8.0"
   }
 }
