--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mongodb": "^6.1.0",
     "next": "^13.5.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.8.0"
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "^18.2.0"
   }
 }
