--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.11",
     "bootstrap": "^5.3.2",
     "mongodb": "^6.1.0",
     "next": "^13.5.2",
